--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,69 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Orange Search Engine</title>
+    <!-- <meta name="description" content="asdasdasd"> -->
+    <link rel="icon" type="image/png" href="/FAV.png">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/font-awesome-4.6.3/css/font-awesome.min.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+<style>
+
+@font-face {
+  font-family: 'Lato';
+  src:  url('/fonts/Lato/Lato-Regular.ttf') format('ttf');
+}
+
+body {
+  font-family: 'Lato', "Microsoft YaHei", "微软雅黑", sans-serif;
+  background-color: #F3F3F3;
+  transition:all 0.3s ease-out;
+}
+#search-input{
+	font-size: 22px;
+	font-weight: 300;
+	height: 42px;
+}
+#search-button{
+	padding-left:39px; 
+	padding-right:39px;
+}
+</style>
+</head>
+<body>
+
+<header class="container-fluid" style='min-height: 666px;'>
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3 text-center" style="text-align: center; margin-top: 166px; ">
+			<img src="ICON.png" style="width:38px;">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3 text-center" style="text-align: center; margin-top: 86px; ">
+			<input type="text" id='search-input' class="form-control" id="" placeholder="" autofocus="">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 text-center" style="margin-top: 16px;">
+			<button type="button" id='search-button' class="btn btn-success btn-lg">Search</button>
+		</div>
+	</div>
+</header>
+
+
+<script src="/js/jquery-2.2.3.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script>
+
+</script>
+</body>
+</html>
