fix readme image & about footer

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,11 +37,22 @@ body {
 	padding-left:39px; 
 	padding-right:39px;
 }
+body {
+  /*margin-bottom: 60px;*/
+}
+.footer {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  height: 24px;
+  line-height: 24px;
+  /*background-color: white;*/
+}
 </style>
 </head>
 <body>
 
-<header class="container-fluid" style='min-height: 666px;'>
+<header class="container-fluid" style=''>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3 text-center" style="text-align: center; margin-top: 166px; ">
 			<img src="ICON.png" style="width:38px;">
@@ -58,6 +69,24 @@ body {
 		</div>
 	</div>
 </header>
+
+<footer class="footer">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-1 text-center" style="">
+				<a href="/about" style="color:gray;">About</a>
+			</div>
+<!-- 			<div class="col-md-2" style="">
+				<div style='color:#3e3e3e; font-weight: 400; background-color: red; height: 100%; display: inline-block; padding-left: 20px;padding-right: 20px;'>Index Page: </div>
+
+				<div style='color:#3e3e3e; font-weight: 400; background-color: red; height: 100%; display: inline-block; padding-left: 20px;padding-right: 20px;'>2019</div>
+			</div>
+			<div class="col-md-10" style="  ">
+				Index Site: Quora, Wikipedia, Stackoverflow, Medium, HackerNew, 
+			</div> -->
+		</div>
+	</div>
+</footer>
 
 
 <script src="/js/jquery-2.2.3.min.js"></script>
