--- a/app/views/welcome/search.html.erb
+++ b/app/views/welcome/search.html.erb
@@ -1,2 +1,45 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>  | Search Result</title>
+    <!-- <meta name="description" content="asdasdasd"> -->
+    <link rel="icon" type="image/png" href="/FAV.png">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/font-awesome-4.6.3/css/font-awesome.min.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+<style>
+
+@font-face {
+  font-family: 'Lato';
+  src:  url('/fonts/Lato/Lato-Regular.ttf') format('ttf');
+}
+
+body {
+  font-family: 'Lato', "Microsoft YaHei", "微软雅黑", sans-serif;
+  background-color: #F3F3F3;
+  transition:all 0.3s ease-out;
+}
+
+</style>
+</head>
+<body>
+
+
+
+
+<script src="/js/jquery-2.2.3.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script>
+
+</script>
+</body>
+</html>
