--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,6 @@
   font-family: 'Lato';
   src:  url('/fonts/Lato/Lato-Regular.ttf') format('ttf');
 }
-
 body {
   font-family: 'Lato', "Microsoft YaHei", "微软雅黑", sans-serif;
   background-color: #F3F3F3;
@@ -37,20 +36,19 @@ body {
 	padding-left:39px; 
 	padding-right:39px;
 }
-body {
-  /*margin-bottom: 60px;*/
-}
 .footer {
   position: absolute;
   bottom: 20px;
   width: 100%;
   height: 24px;
   line-height: 24px;
-  /*background-color: white;*/
 }
 </style>
 </head>
 <body>
+
+<form id="searchForm" action="/search" method="get">
+</form>
 
 <header class="container-fluid" style=''>
 	<div class="row">
@@ -60,12 +58,12 @@ body {
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3 text-center" style="text-align: center; margin-top: 86px; ">
-			<input type="text" id='search-input' class="form-control" id="" placeholder="" autofocus="">
+			<input form="searchForm" type="text" name='s' id='search-input' class="form-control" id="" placeholder="" autofocus="">
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2 text-center" style="margin-top: 16px;">
-			<button type="button" id='search-button' class="btn btn-success btn-lg">Search</button>
+			<button form="searchForm" type="submit" id='search-button' class="btn btn-success btn-lg">Search</button>
 		</div>
 	</div>
 </header>
