--- a/app/views/welcome/search.html.erb
+++ b/app/views/welcome/search.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>  | Search Result</title>
+    <title><%= @searchword %>  | Search Result</title>
     <!-- <meta name="description" content="asdasdasd"> -->
     <link rel="icon" type="image/png" href="/FAV.png">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
